Added swagger doc and generated for Content api GetAll, GetByID, CreateContent, UpdateContent, DeleteContent
